tests/fail/fail_primitive_literal_out_of_range.kr
fn inisiu() {
    u8 byte = 300;
}
